--- a/docs/config_examples/customResourceDefinitions/customresourcedefinitions.yml
+++ b/docs/config_examples/customResourceDefinitions/customresourcedefinitions.yml
@@ -18,7 +18,7 @@ spec:
       storage: true
       schema:
         openAPIV3Schema:
-          type: objectglobalFlags
+          type: object
           properties:
             spec:
               type: object
