--- a/build-tools/Dockerfile.debug
+++ b/build-tools/Dockerfile.debug
@@ -49,5 +49,6 @@ ENV GODEBUG x509ignoreCN=0
 
 USER ctlr
 EXPOSE 40000
+EXPOSE 5000
 # Run the run application in the projects bin directory.
 CMD [ "/app/bin/k8s-bigip-ctlr" ]
