--- a/build-tools/Dockerfile.debug
+++ b/build-tools/Dockerfile.debug
@@ -29,7 +29,7 @@ WORKDIR $APPPATH
 
 COPY requirements.txt /tmp/requirements.txt
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get clean && apt-get update && apt-get install -y --no-install-recommends \
         git \
     && apt-get upgrade -y \
     && pip install --no-cache-dir --upgrade pip==20.0.2 \
